--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 /* Author: Kobi Rogers*/
 /* Imports */
-@import url('https://fonts.googleapis.com/css2?family=Domine:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Domine:wght@400;700&family=Padauk&display=swap');
 /* | Narrow Screen */
 /* || General Styles */
 * {
@@ -17,31 +17,40 @@ body {
     color: rgb(0, 0, 0);
 }
 article {
-    margin-bottom: 1rem;
     width: 100%;
 }
 p {
-    font-size: 12px;
     line-height: 1.5rem;
 }
 a {
     color: inherit;
     text-decoration: none;
+    transition: ease-in-out 0.5s;
+}
+.link:hover {
+    color: orange;
 }
 h1 {
-    font-size: 30px;
+    font-size: 2.5rem;
     font-weight: 700;
+    margin-top: 0.5rem;
     color: #FF7582;
 }
 h2 {
-    font-size: 20px;
+    font-family: sans-serif;
+    font-size: 2rem;
     font-weight: 700;
+    line-height: 3rem;
+    margin-top: 0.5rem;
     color: #C56D86;
 }
 h3 {
-    font-size: 18px;
-    font-weight: 700;
-    color: #f5f5f5
+    font-family: sans-serif;
+    font-size: 1.5rem;
+    font-weight: 400;
+    line-height: 2rem;
+    margin-top: 0.5rem;
+    color: #C56D86;
 }
 
 /* || Classes */
@@ -51,6 +60,7 @@ h3 {
     justify-content: space-evenly;
 }
 .nav a {
+    font-size: 16px;
     text-align: center;
     width: 6rem;
     height: 44px;
@@ -59,7 +69,8 @@ h3 {
     color: rgb(29, 29, 29);
 }
 .logo {
-    padding: 0.5em;
+    width: 100%;
+    padding: 0.5rem;
     text-align: center;
 }
 .profile {
@@ -67,17 +78,31 @@ h3 {
     flex-direction: column;
     align-items: center;
     background-color: #e4cbcb;
-    margin: 1rem;
     line-height: 2rem;
 }
 .profile img {
     margin: 1rem;
-    width: 10rem;
     border-radius: 0.75rem;
     transform: rotate(5deg);
+    width: 10rem;
 }
-.content {
-    padding-left: 1rem;
+.margin-1rem {
+    margin: 1rem;
+}
+.main {
+    width: 80%;
+}
+.project {
+    display: flex;
+    flex-direction: column;
+}
+.project img {
+    padding-left: 5%;
+    width: 10rem;
+    align-self: center;
+}
+.my-name-is {
+    font-size: 1rem;
 }
 
 /* || Tailwind Shadows */
@@ -98,20 +123,22 @@ h3 {
 }
 
 /* | Mobile devices */
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 425px) {
+    
 }
 
 /* | Tablet devices */
-@media screen and (max-width: 769px) {
+@media screen and (max-width: 768px) {
 }
 
 /* | Small screens, laptops */
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1023px) {
+ 
 }
 
 /* | Desktops, TVs */
-@media screen and (min-width: 1200px) {
-    img {
-        width: 20rem;
+@media screen and (min-width: 1024px) {
+    .profile img {
+        width: 15rem;
     }
 }
